[gd_scene load_steps=10 format=3 uid="uid://cdi548mxk3mx2"]

[ext_resource type="PackedScene" uid="uid://8mrhitx8ws2s" path="res://level/collectibles/assets/base/fishbait.glb" id="1_81g7a"]
[ext_resource type="Script" uid="uid://5crcpw5ij5mk" path="res://level/collectibles/scene/rigidbody_collectible.gd" id="1_es3ye"]
[ext_resource type="Script" uid="uid://d3evtq3o86t31" path="res://sounds_effects/random_stream_player.gd" id="3_256o4"]
[ext_resource type="AudioStream" uid="uid://dvu3rbyroko6q" path="res://sounds_effects/kenney_impact-sounds/impactWood_medium_000.ogg" id="4_256o4"]
[ext_resource type="AudioStream" uid="uid://n3y5gkvoifd4" path="res://sounds_effects/kenney_impact-sounds/impactWood_medium_001.ogg" id="5_478ql"]
[ext_resource type="AudioStream" uid="uid://lka0yuq63dwr" path="res://sounds_effects/kenney_impact-sounds/impactWood_medium_002.ogg" id="6_2bdth"]
[ext_resource type="AudioStream" uid="uid://cdu1840ptxt7y" path="res://sounds_effects/kenney_impact-sounds/impactWood_medium_003.ogg" id="7_ssab8"]
[ext_resource type="AudioStream" uid="uid://binbjsufyl030" path="res://sounds_effects/kenney_impact-sounds/impactWood_medium_004.ogg" id="8_lx2tx"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_81g7a"]
points = PackedVector3Array(-0.1875, -0.125, -0.0776723, -0.1875, -0.125, 0.0776356, -0.1875, 0.5, -0.0776723, -0.0776723, -0.125, -0.1875, -0.0776723, -0.125, 0.1875, -0.1875, 0.5, 0.0776356, -0.0776723, 0.5, -0.1875, 0.0776356, -0.125, -0.1875, 0.0776356, -0.125, 0.1875, -0.0776723, 0.5, 0.1875, 0.0776356, 0.5, -0.1875, 0.1875, -0.125, -0.0776723, 0.1875, -0.125, 0.0776356, 0.0776356, 0.5, 0.1875, 0.1875, 0.5, -0.0776723, 0.1875, 0.5, 0.0776356)

[node name="RigidbodyCollectible" type="RigidBody3D"]
collision_layer = 8
collision_mask = 10
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_es3ye")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.18125, 0)
shape = SubResource("ConvexPolygonShape3D_81g7a")

[node name="FishBait" parent="." instance=ExtResource("1_81g7a")]

[node name="RandomStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Sound Effect"
script = ExtResource("3_256o4")
streams = Array[AudioStream]([ExtResource("4_256o4"), ExtResource("5_478ql"), ExtResource("6_2bdth"), ExtResource("7_ssab8"), ExtResource("8_lx2tx")])
metadata/_custom_type_script = "uid://d3evtq3o86t31"

[node name="SoundCooldown" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.3
one_shot = true
